# reproducible-modelling

./: Makefile  README.md  pyproject.toml  setup.py
data/: hand_written_digits_data.npy
results/estimates/: hyper_params_performance.csv
scripts/: evaluate_hyper_params_effect.py  load_data.py  plot_hyper_params_effect.py  run_analysis.sh
src/: __init__.py  setup.py
src/hyper/: __init__.py  evaluation.py  grid.py  plotting.py
