[tool.poetry]
name = "reproducible-modelling-dev"
version = "0.1.0"
description = "A simple example of a reproducible modelling project"
authors = ["Armin W. Thomas <athms@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.21.1"
pandas = "1.3.3"
scikit-learn = "1.0"
seaborn = "0.11.2"
matplotlib = "3.4.3"
setuptools = "^58.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"