[tool.poetry]
name = "reproducible-modelling"
version = "0.1.0"
description = "Exemplary reproducible modelling project"
authors = ["Armin W. Thomas <athms@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.21.1"
pandas = "1.3.3"
scikit-learn = "1.0"
seaborn = "0.11.2"
matplotlib = "3.4.3"
src = {path = "src"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
